force-app/main/default/objects/Review__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula
  >Job_Application__r.Candidate__r.First_Name__c + &apos; &apos; + Job_Application__r.Candidate__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>