force-app/main/default/objects/Review__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <formula>Job_Application__r.Position__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Title</label>
    <type>Text</type>
</CustomField>