force-app/main/default/objects/Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage
    >Reviewer can be only interviewer or recruiter</errorMessage>
        <filterItems>
            <field>Account.Owner.UserRoleId</field>
            <operation>notEqual</operation>
            <value>F00EQy000003KyaH</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>