force-app/main/default/objects/Review__c/validationRules/Old_Reviewed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Old_Reviewed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Reviewed_Date__c &lt; Today()</errorConditionFormula>
    <errorDisplayField>Reviewed_Date__c</errorDisplayField>
    <errorMessage>Reviewed date cannot be in the past</errorMessage>
</ValidationRule>