force-app/main/default/objects/Review__c/validationRules/Rating_After_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_After_Review</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Need review&quot;),  !ISNULL(Rating__c))</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating can be set only after review</errorMessage>
</ValidationRule>