force-app/main/default/objects/Review__c/validationRules/Rating_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Max</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &gt; 1</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Rating cannot exceed 100%</errorMessage>
</ValidationRule>