force-app/main/default/objects/Review__c/validationRules/Reviewed_Date_for_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Reviewed_Date_for_Completed</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(ISPICKVAL(Status__c, &quot;Need review&quot;), !ISNULL(Reviewed_Date__c) )</errorConditionFormula>
    <errorDisplayField>Reviewed_Date__c</errorDisplayField>
    <errorMessage
  >Reviewed Date can be set only if status is &quot;Need review&quot;</errorMessage>
</ValidationRule>