force-app/main/default/objects/Review__c/listViews/Reviews_List.listView-meta.xml
<ListView>
    <fullName>Reviews_List</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>Reviews List</label>
</ListView>